Mobile options box

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				<canvas style="border:2px solid lightgray;" id="myCanvas" width="height: 100vw" height="100vh"></canvas>
 		</div>
 		<button class="button" id="start-button" onclick="startSimulator()">Start</button>
-		<div class="options">
+		<div id="options" class="options">
 			<div class="options-content">
 				<ul>
 				<h1 style="color:white;">Options: </h1>
