Improved Random City

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<li><button id="premadeCityButton" class="button" onclick="toggleDrawPremade()">Random City</button></li>
 				<li><button class="button" onclick="clearCities()">Clear Cities</button></li>
 				<li><button id="resetButton" class="button" onclick="location.reload()">Reset</button></li>
+				<li><input id="citiesToBuild" type="text" value="20"><br>Premade cities input</li>
 				<li><p style="height: 200px;" id="path_text">Current Paths: </p></li>
 			</ul>
 			</div>
