--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>City Blueprint</title>
 	<link href="https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="src/style.css">
 	<link rel="stylesheet" media="screen and (device-height: 600px)"/>
 </head>
 
@@ -31,11 +31,11 @@
 	</div>
 
 </body>
-<script src="CityBuilder.js"></script>
-<script src="Pathfinder.js"></script>
-<script src="BotCar.js"></script>
-<script src="Road.js"></script>
-<script src="City.js"></script>
-<script src="CustomAnimation.js"></script>
-<script src="Main.js"></script>
+<script src="src/CityBuilder.js"></script>
+<script src="src/Pathfinder.js"></script>
+<script src="src/BotCar.js"></script>
+<script src="src/Road.js"></script>
+<script src="src/City.js"></script>
+<script src="src/CustomAnimation.js"></script>
+<script src="src/Main.js"></script>
 </html>
