--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<li><button class="button" onclick="clearCities()">Clear Cities</button></li>
 						<li><button id="resetButton" class="button" onclick="location.reload()">Reset</button></li>
 						<li><input id="citiesToBuild" type="text" value="20"><br>Premade cities input</li>
-						<li><p style="height: 200px;" id="path_text">Current Paths: </p></li>
+						<!-- <li><p style="height: 200px;" id="path_text">Current Paths: </p></li> -->
 					</ul>
 				</div>
 				<p id="info_text">INFO: To find the shortest path between to cities press the <b style="color:lightgreen">"Find Path"</b> button, if you want to connect multiple cities click the <b style="color:lightgreen">"Save Paths"</b> button. To create a fully random city press the <b style="color:lightgreen">"Random City"</b> button. </p>
