--- a/index.html
+++ b/index.html
@@ -12,21 +12,26 @@
 			<div class="canvasdiv" onclick="mouseClick(event)">
 					<canvas style="border:2px solid lightgray;" id="myCanvas" width="height: 100vw" height="100vh"></canvas>
 			</div>
+			<div style="display: none;" id="info-board-id" class="info-board">
+				<p style="font-size: 25px;">Help board:</p>
+				<p id="info_text">INFO: Press <b style="color:red">R</b> to undo last city built. To find the shortest path between to cities press the <b style="color:darkgreen">"Find Path"</b> button, if you want to connect multiple cities click the <b style="color:darkgreen">"Save Paths"</b> button. To create a fully random city press the <b style="color:darkgreen">"Random City"</b> button. </p>
+				<button style="width: 20%;height: 20%;" onclick="InfoBoardToggle();">close</button>
+			</div>
 			<button class="button" id="start-button" onclick="startSimulator()">Start</button>
 			<div id="options" class="options">
 				<div class="options-content">
 					<ul>
 						<h1 style="color:white;">Options: </h1>
-						<li><button id="changeMS" class="button" onclick="changeMouseState()">Find Path</button></li>
+						<li><button id="changeMS" class="button" 	onclick="changeMouseState()">Find Path</button></li>
 						<li id="saveToggle2" style="display: none;"><button id="saveToggle" style="display: none;" class="button" onclick="togglePathSave()">Save Paths</button></li>
 						<li><button id="premadeCityButton" class="button" onclick="toggleDrawPremade()">Random City</button></li>
 						<li><button class="button" onclick="clearCities()">Clear Cities</button></li>
 						<li><button id="resetButton" class="button" onclick="location.reload()">Reset</button></li>
+						<li><button id="helpButton" class="button" onclick="InfoBoardToggle()">Help</button></li>
 						<li><input id="citiesToBuild" type="text" value="20"><br>Premade cities input</li>
 						<!-- <li><p style="height: 200px;" id="path_text">Current Paths: </p></li> -->
 					</ul>
 				</div>
-				<p id="info_text">INFO: To find the shortest path between to cities press the <b style="color:lightgreen">"Find Path"</b> button, if you want to connect multiple cities click the <b style="color:lightgreen">"Save Paths"</b> button. To create a fully random city press the <b style="color:lightgreen">"Random City"</b> button. </p>
 			</div>
 		</div>
 	</body>
