--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 						<li><button id="premadeCityButton" class="button" onclick="toggleDrawPremade()">Random Graph</button></li>
 						<li><button id="directionButton" class="button" onclick="toggleDirection()">Undirected</button></li>
 						<li><button id="autoConnectButton" class="button" onclick="toggleAutoConnect()">Auto Connect</button></li>
+						<li><button id="colorNode" class="button" onclick="toggleNodeColor()">Color Mode</button></li><input style="margin: auto;width: 85%;height: 5%;" value="#00FF00" id="nodecolorid" type="color">
 						<li><h2 style="color:white;">Help: </h2></li>
 						<li><button class="button" onclick="clearCities()">Clear Graph</button></li>
 						<li><button id="resetButton" class="button" onclick="location.reload()">Reset</button></li>
